--- a/bi/package.json
+++ b/bi/package.json
@@ -1,6 +1,31 @@
 {
+  "devDependencies": {
+    "auto-prefixer": "^0.4.2",
+    "babel": "^6.23.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "export-loader": "^1.0.52",
+    "install": "^0.13.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "node-sass": "^9.0.0",
+    "normalize.css": "^8.0.1",
+    "npm": "^10.8.1",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1"
+  },
+  "scripts": {
+    "build": "webpack",
+    "sass": "rm -f public/assets/main.css && sass -I node_modules public/assets/main.scss public/assets/main.css"
   }
 }
