--- a/bi/package.json
+++ b/bi/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "datatables.net-dt": "^2.0.8",
     "jquery": "^3.7.1"
   },
